--- a/samples/cpp/mnist/Makefile
+++ b/samples/cpp/mnist/Makefile
@@ -112,14 +112,14 @@ t10k-labels-idx1-ubyte: t10k-labels-idx1-ubyte.gz
 	gzip -c -d t10k-labels-idx1-ubyte.gz   > t10k-labels-idx1-ubyte
 
 train-images-idx3-ubyte.gz:
-	wget http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz
+	wget https://github.com/hamlinzheng/mnist/blob/master/dataset/train-images-idx3-ubyte.gz
 
 train-labels-idx1-ubyte.gz:
-	wget http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz
+	wget https://github.com/hamlinzheng/mnist/blob/master/dataset/train-labels-idx1-ubyte.gz
 
 t10k-images-idx3-ubyte.gz:
-	wget http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz
+	wget https://github.com/hamlinzheng/mnist/blob/master/dataset/t10k-images-idx3-ubyte.gz
 
 t10k-labels-idx1-ubyte.gz:
-	wget http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz
+	wget https://github.com/hamlinzheng/mnist/blob/master/dataset/t10k-labels-idx1-ubyte.gz
 
